--- a/esp32_dht22.yaml
+++ b/esp32_dht22.yaml
@@ -9,8 +9,8 @@ logger:
 
 # mulakan WiFi
 wifi:
-  ssid: 위클리
-  password: nfaizahsel84
+  ssid: iotProject
+  password: iotProjectESP32
 
 # mulakan Web Server
 web_server:
