--- a/esp32_dht22_logger.yaml
+++ b/esp32_dht22_logger.yaml
@@ -13,8 +13,8 @@ logger:
 
 # mulakan WiFi
 wifi:
-  ssid: 위클리
-  password: nfaizahsel84
+  ssid: iotProject
+  password: iotProjectESP32
 
 # mulakan Web Server
 web_server:
