--- a/esp32_dht22.yaml
+++ b/esp32_dht22.yaml
@@ -9,8 +9,8 @@ logger:
 
 # mulakan WiFi
 wifi:
-  ssid: iotProject
-  password: iotProjectESP32
+  ssid: ssid_wifi_anda
+  password: password_anda
 
 # mulakan Web Server
 web_server:
