--- a/esp32_dht22_mqtt.yaml
+++ b/esp32_dht22_mqtt.yaml
@@ -12,8 +12,8 @@ logger:
 
 # mulakan WiFi
 wifi:
-  ssid: iotProject
-  password: iotProjectESP32
+  ssid: ssid_wifi_anda
+  password: password_anda
 
 mqtt:
   broker: 192.168.0.20
